2004-01-19  Thomas Vander Stichele  <thomas at apestaart dot org>

	* docs/random/error:
          doc explaining error system
	* gst/elements/gstfilesrc.c: (gst_filesrc_open_file):
          cleanup

2004-01-19  Thomas Vander Stichele  <thomas at apestaart dot org>

	* gst/gst-i18n-app.h:
	* gst/gst-i18n-lib.h:
          remove inclusion of config.h
	* po/POTFILES.in:
	* po/nl.po:
          add gst/gstelement.c

2004-01-19  Thomas Vander Stichele  <thomas at apestaart dot org>

	* po/nl.po: updated Dutch translation

2004-01-19  Thomas Vander Stichele  <thomas at apestaart dot org>

	* gst/gsterror.c: (_gst_core_errors_init),
	(_gst_library_errors_init), (_gst_resource_errors_init),
	(_gst_stream_errors_init):
        remove ending punctuation dots

2004-01-19  Thomas Vander Stichele  <thomas at apestaart dot org>

	* gst/elements/gstfilesink.c: (gst_filesink_open_file):
	* gst/elements/gstfilesrc.c: (gst_filesrc_get_read):
	* gst/elements/gstmultidisksrc.c: (gst_multidisksrc_open_file):
	* gst/elements/gstpipefilter.c: (gst_pipefilter_get),
	(gst_pipefilter_chain), (gst_pipefilter_open_file):
        use GST_ERROR_SYSTEM

2004-01-19  Thomas Vander Stichele  <thomas at apestaart dot org>

	* gst/gstelement.c: (gst_element_error_printf),
	(gst_element_error_extended):
	* gst/gstelement.h:
          add a helper printf function so we can have NULL values passed.

2004-01-19  Thomas Vander Stichele  <thomas at apestaart dot org>

	* gst/gstelement.h:
          add G_STMT macros to gst_element_error, which isn't strictly
          necessary but people tell me to anyway.

2004-01-18  Thomas Vander Stichele  <thomas at apestaart dot org>

	* gst/Makefile.am:
	* gst/autoplug/gstspideridentity.c:
	(gst_spider_identity_sink_loop_type_finding):
	* gst/elements/gstfakesink.c: (gst_fakesink_change_state):
	* gst/elements/gstfilesink.c: (gst_filesink_open_file),
	(gst_filesink_close_file), (gst_filesink_handle_event),
	(gst_filesink_chain):