@@ -142,8 +142,8 @@ typedef enum {
 #define gst_element_error(el, domain, code, message, debug) G_STMT_START { \
   gst_element_error_extended (GST_ELEMENT(el), \
   GST_ ## domain ## _ERROR, GST_ ## domain ## _ERROR_ ## code, \
-  gst_element_error_printf message, \
-  gst_element_error_printf debug, \
+  _gst_element_error_printf message, \
+  _gst_element_error_printf debug, \
   __FILE__, GST_FUNCTION, __LINE__); } G_STMT_END
 
 typedef struct _GstElementFactory GstElementFactory;
